--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,7 @@ jobs:
   build:
     docker:
       - image: circleci/php:7.2-browsers
+      - image: circleci/node:8.4.0
     working_directory: ~/laravel
     steps:
       - checkout
