--- a/package.json
+++ b/package.json
@@ -1,22 +1,39 @@
 {
     "private": true,
+    "jest": {
+        "roots": [
+            "<rootDir>/resources/assets/js/"
+        ],
+        "setupFiles": [
+            "<rootDir>/resources/assets/js/setUpTests.js"
+        ],
+        "setupTestFrameworkScriptFile": "./node_modules/jest-enzyme/lib/index.js"
+    },
     "scripts": {
         "dev": "npm run development",
         "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
         "watch": "npm run development -- --watch",
         "watch-poll": "npm run watch -- --watch-poll",
+        "test": "cross-env NODE_ENV=test jest",
+        "test:watch": "npm run test -- --watch --notify",
         "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
         "prod": "npm run production",
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
         "axios": "^0.18",
+        "babel-preset-react": "^6.23.0",
         "bootstrap": "^4.0.0",
-        "popper.js": "^1.12",
         "cross-env": "^5.1",
+        "enzyme": "^3.4.2",
+        "enzyme-adapter-react-16": "^1.2.0",
+        "jest": "^23.5.0",
+        "jest-enzyme": "^6.0.3",
         "jquery": "^3.2",
         "laravel-mix": "^2.0",
         "lodash": "^4.17.4",
-        "vue": "^2.5.7"
+        "popper.js": "^1.12",
+        "react": "^16.2.0",
+        "react-dom": "^16.2.0"
     }
 }
