WIP: consume the API in the front-end

--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
         "popper.js": "^1.12",
         "react": "^16.2.0",
         "react-dom": "^16.2.0"
+    },
+    "dependencies": {
+        "react-redux": "^5.0.7"
     }
 }
