--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
         "react-dom": "^16.2.0"
     },
     "dependencies": {
-        "react-redux": "^5.0.7"
+        "react-redux": "^5.0.7",
+        "redux": "^4.0.0",
+        "redux-logger": "^3.0.6",
+        "redux-thunk": "^2.3.0"
     }
 }
