--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "react-dom": "^16.2.0"
     },
     "dependencies": {
+        "prop-types": "^15.6.2",
         "react-redux": "^5.0.7",
         "redux": "^4.0.0",
         "redux-logger": "^3.0.6",
