Retrieve a list of movies (#5)
* Installed guzzle package

* Added the movie proxy

* nstalled debugbar

* Ignore everything in storage directory

* Retrieve a list of movies

* WIP: consume the API in the front-end

* Set-up redux

* Catch guzzle exceptions

- Pass the exception messages as json to the laravel api

* Added proptypes package

* WIP: create the UI

* Install styled-components and it's plugins

* Display movies

- Display the fetched movies on the page and style them

* Added loading spinner

* Added action tests

* Added reducer test

* Delete the Example component

* Added the loading spinner test

* Added tests for MoviesWrapper component

* Renamed the MoviesList component

* Added test for MoviesList component

* Added movies controller test

* Minor clean-up

* Transpiled JS file

* Re-compiled the react file

* Removed the unwanted test

* Add the wrapper test

* Delete the folder

* Temporary renamed the folder

* Renamed folder to movies

* Fix indentation

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 /node_modules
 /public/hot
 /public/storage
-/storage/*.key
 /vendor
 /.idea
 /.vscode
@@ -12,4 +11,5 @@ npm-debug.log
 yarn-error.log
 .env
 .phpunit.result.cache
+/storage/*
 /public/mix-manifest.json
