--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     },
     "devDependencies": {
         "axios": "^0.18",
+        "babel-plugin-styled-components": "^1.5.1",
         "babel-preset-react": "^6.23.0",
         "bootstrap": "^4.0.0",
         "cross-env": "^5.1",
@@ -34,6 +35,16 @@
         "lodash": "^4.17.4",
         "popper.js": "^1.12",
         "react": "^16.2.0",
-        "react-dom": "^16.2.0"
+        "react-dom": "^16.2.0",
+        "redux-mock-store": "^1.5.3"
+    },
+    "dependencies": {
+        "polished": "^1.9.3",
+        "prop-types": "^15.6.2",
+        "react-redux": "^5.0.7",
+        "redux": "^4.0.0",
+        "redux-logger": "^3.0.6",
+        "redux-thunk": "^2.3.0",
+        "styled-components": "^3.4.2"
     }
 }
