--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "redux": "^4.0.0",
         "redux-logger": "^3.0.6",
         "redux-thunk": "^2.3.0",
+        "reselect": "^3.0.1",
         "styled-components": "^3.4.2"
     }
 }
