--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "devDependencies": {
         "axios": "^0.18",
         "babel-plugin-styled-components": "^1.5.1",
+        "babel-plugin-transform-class-properties": "^6.24.1",
         "babel-preset-react": "^6.23.0",
         "bootstrap": "^4.0.0",
         "cross-env": "^5.1",
@@ -41,6 +42,7 @@
     "dependencies": {
         "polished": "^1.9.3",
         "prop-types": "^15.6.2",
+        "react-js-pagination": "^3.0.2",
         "react-redux": "^5.0.7",
         "react-router-dom": "^4.3.1",
         "redux": "^4.0.0",
