Add pagination to the movies' list (#9)
* WIP: Adding pagination

* Paginate the movie list

* Delete nextPage

* Show 10 movies per page

* Fix tests

* Renamed variable

* Fix .scss indentation

* More indentation

* Uggh...indentation

* Fix .babelrc indentation

--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,7 @@
 {
-    "presets": ["env", "react"],
-    "plugins": ["styled-components"]
+  "presets": ["env", "react"],
+  "plugins": [
+    "styled-components",
+    "transform-class-properties"
+  ]
 }
