--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
         "redux-mock-store": "^1.5.3"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^1.2.4",
+        "@fortawesome/free-solid-svg-icons": "^5.3.1",
+        "@fortawesome/react-fontawesome": "^0.1.2",
         "polished": "^1.9.3",
         "prop-types": "^15.6.2",
         "react-js-pagination": "^3.0.2",
