--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "@fortawesome/fontawesome-svg-core": "^1.2.4",
         "@fortawesome/free-solid-svg-icons": "^5.3.1",
         "@fortawesome/react-fontawesome": "^0.1.2",
+        "date-fns": "^1.29.0",
         "polished": "^1.9.3",
         "prop-types": "^15.6.2",
         "react-js-pagination": "^3.0.2",
