--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "react-js-pagination": "^3.0.2",
         "react-redux": "^5.0.7",
         "react-router-dom": "^4.3.1",
+        "react-transition-group": "1.x",
         "redux": "^4.0.0",
         "redux-logger": "^3.0.6",
         "redux-thunk": "^2.3.0",
