--- a/package.json
+++ b/package.json
@@ -7,7 +7,14 @@
         "setupFiles": [
             "<rootDir>/resources/assets/js/setUpTests.js"
         ],
-        "setupTestFrameworkScriptFile": "./node_modules/jest-enzyme/lib/index.js"
+        "setupTestFrameworkScriptFile": "./node_modules/jest-enzyme/lib/index.js",
+        "collectCoverageFrom": [
+            "**/*.{js|jsx}",
+            "!**/node_modules/**",
+            "!**/vendor/**"
+        ],
+        "coverageReporters": ["lcov"],
+        "coverageDirectory": "temp"
     },
     "scripts": {
         "dev": "npm run development",
@@ -16,6 +23,7 @@
         "watch-poll": "npm run watch -- --watch-poll",
         "test": "cross-env NODE_ENV=test jest",
         "test:watch": "npm run test -- --watch --notify",
+        "test:coverage": "npm run test -- --coverage",
         "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
         "prod": "npm run production",
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
